# meme

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  install.sh  libtool  snapcraft.yaml  todo.org
Meme/Meme.xcodeproj/: project.pbxproj
Meme/meme/: main.c
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
build-aux/: ltmain.sh.rej
doc/: BUILDINFO.5.txt  Makefile  Makefile.am  Makefile.in  asciidoc.conf  makepkg.8.txt  makepkg.conf.5.txt  meme-key.8.txt  meme.8.txt  meme.conf.5.txt  pacman.8.txt
etc/: Makefile  Makefile.am  Makefile.in  meme.conf.in
lib/hashids/: Makefile.am
lib/libalpm/: Makefile  Makefile.in  alpm.h  db.h  dload.c  libalpm.pc  libalpm.pc.in  package.h  util-common.h  util.c  util.h
scripts/: Makefile  Makefile.am  Makefile.in  makepkg-template.pl.in  makepkg.sh.in  meme-db-upgrade.sh.in  meme-key.sh.in  pkgdelta.sh.in  repo-add.sh.in
scripts/completion/: bash_completion.in  zsh_completion.in
scripts/po/: .gitignore  Makefile  Makefile.in  POTFILES.in
snap/: snapcraft.yaml
src/common/: Makefile  Makefile.in  ini.h
src/meme/: .gitignore  Makefile  Makefile.am  Makefile.in  add.c  add.h  callback.c  callback.h  check.c  check.h  conf.c  conf.h  database.c  deptest.c  emoji.h  files.c  ini.c  meme-conf.c  meme.c  meme.h  package.c  package.h  query.c  remove.c  sighandler.h  sync.c  upgrade.c  util-common.h  util.c  util.h
src/util/: Makefile  Makefile.am  Makefile.in  cleanupdelta.c  testpkg.c  vercmp.c
(+109 files in other folders)
